[tool.poetry]
name = "lastfm-collage"
version = "0.1.0"
description = "Create collage image of top lastfm albums"
authors = ["Connor Kelleher <connor.r.kelleher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylast = { git = "https://github.com/pylast/pylast.git", branch = "master" }
Pillow = "^7.2.0"
wget = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
